cmd/internal/generator/testdata/validation/51_slice_in.go
package testdata

type T51Validator struct {
	F1 []string `is:"required,[]email"`
	F2 []string `is:"len:1:,[]email"`
}
